# OnePromptAISubAgents

./: .env.example  .eslintrc.json  .gitignore  AUDIT-eslint-report.md  AUDIT-eslint-tests.json  AUDIT-tsc-report.md  AUDIT-tsc-src.json  AUDIT-tsc-tests.json  DEPLOYMENT.md  Dockerfile  FINAL-verification-report.md  README.md  coins.js  collision.js  dashboard.py  docker-compose.yml  game.js  index.html  input.js  main.py  obstacles.js  package-lock.json  package.json  player.js  pyproject.toml  renderer.js  requirements.txt  setup.py  styles.css  test.txt  tsconfig.json  ui.js  vercel.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  test.yml
css/: styles.css
dinolab/: GOING_LIVE.md  GOURCE_SETUP.md  HOW_TO_WATCH_BUILD.md  README.md  RUNBOOK.md  SPEC_FOR_ONEPROMPT.md
dinolab/infra/: DEPLOY_GUIDE.md  README.md  SETUP_LOCAL.md  local_ask_server.py  (+1 more)
js/: coins.js  collision.js  game.js  gameState.js  ground.js  input.js  lanes.js  main.js  obstacles.js  particles.js  player.js  renderer.js  scene.js  ui.js
oneprompt/: __init__.py  bedrock_tools.py  config.py  db.py  git_utils.py  llm_client.py  merge_queue.py  orchestrator.py  planner.py  reconciler.py  run_roles.py  sandbox.py  task_queue.py  templates.py  types.py  vault.py  worker.py
prompts/: architect.md  devops.md  integrator.md  planner.md  reconciler.md  reviewer.md  security.md  subplanner.md  tester.md  worker.md
scripts/: gource-dinolab.sh  gource-setup.sh  health-check.js  startup.sh
src/: app.ts  index.ts
templates/: README.md
tests/: api.test.ts
vault/: OBSIDIAN.md
(+118 files in other folders)
